--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   table_calendar: ^3.1.0
   google_sign_in: ^6.2.1
   shared_preferences: ^2.2.2
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
